Rewrote for new css
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@495 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/contact.html
+++ b/contact.html
@@ -1,53 +1,89 @@
 <html>
-<head>
- <title>How to contact ftnpl.sf.net members</title>
- <meta name="author" content="Robert James Clay">
- <meta name="keywords" CONTENT="Contact, ftnpl, Email, Fidonet">
- <meta name="description" CONTENT="How to contact ftnpl project members. ">
-</head>
-<body>
-<h1 align="center">How to contact ftnpl members</h1>
+  <head>
+     <title>How to contact ftnpl.sf.net members</title>
+     <meta name="author" content="Robert James Clay">
+     <meta name="keywords" CONTENT="Contact, ftnpl, Email, Fidonet">
+     <meta http-equiv="KEYWORDS" CONTENT="Contact, ftnpl, Email, Fidonet">
+     <meta name="description" CONTENT="How to contact ftnpl project members. ">
+     <link rel="stylesheet" type="text/css" href="./screen.css" media="screen, tv, projection" title="Default" />
+     <link rel="stylesheet" type="text/css" href="./print.css" media="print" />
+  </head>
+  <body>
 
-<h2>Contacting <a href="http://sourceforge.net/users/jame">Robert James Clay</a></h2>
+    <div id="header">
+<!--    
+      <div class="superHeader">
+        <span>Related Sites:</span>
+        <a href="http://www.rocasa.org" title="Information & Links">Info</a> |
+        <a href="http://www.ftngate.net" title="Fidonet/FTN Info">FTN</a>
+      </div>
+-->
+      <div class="midHeader">
+       <h1 class="headerTitle" lang="en">Perl for Fidonet (FTN) Systems</h1>
+        <div class="headerSubTitle" title="Description of page">
+          How to contact ftnpl members 
+        </div>
+      </div>
 
-<ul>
- <li><a href="mailto:jame@users.sourceforge.net"><a> jame@users.sourceforge.net</i></a></li>
- <li>If you have access to <a href="ftninfo.html"> Fidonet </a>, you could netmail him at 1:120/544@fidonet.</li>
- <li>If you have access to Sysops TechNet, you can also netmail him at 111:4150/400.</li>
-</ul>
+      <div class="subHeader">
+        <span class="doNotDisplay">Navigation:</span>
+        <a href="./index.html">Home</a> |
+        <a href="./ftnplsw.html#scrpts">Scripts</a> |
+        <a href="./ftnplsw.html#apps">Apps</a> |
+        <a href="./ftnplsw.html#ftnpllinks">Links</a> |
+        <a href="./ftninfo.html">FTN</a> |
+        <a href="./contact.html">Contact Us</a> 
+      </div>
+    </div>
 
-<h2>Contacting <a href="http://sourceforge.net/users/airneil">Russ Johnson</a></h2>
+    <div id="mainbody">
+      <div class="rowOfBoxes">
+        <div class="fullWidth noBorderOnLeft">
+	<h2>Contacting <a href="http://sourceforge.net/users/jame">Robert James Clay</a></h2>
 
-<ul>
- <li><a href="mailto:airneil@users.sourceforge.net"><a> airneil@users.sourceforge.net</i></a></li>
- <li>If you have access to <a href="ftninfo.html"> Fidonet </a>, you could netmail him at 1:105/8.</li>
- <li>If you have access to Sysops TechNet, you can also netmail him at 111:5150/1.</li>
-</ul>
+	<ul>
+	 <li><a href="mailto:jame@users.sourceforge.net"><a> jame@users.sourceforge.net</i></a></li>
+	 <li>If you have access to <a href="ftninfo.html"> Fidonet </a>, you could netmail him at 1:120/544@fidonet.</li>
+	 <li>If you have access to Sysops TechNet, you can also netmail him at 111:4150/400.</li>
+	</ul>
 
-<h2>Contacting <a href="http://sourceforge.net/users/bswift">Bob Swift</a></h2>
+	<h2>Contacting <a href="http://sourceforge.net/users/airneil">Russ Johnson</a></h2>
 
-<ul>
- <li><a href="mailto:bswift@users.sourceforge.net"><a> bswift@users.sourceforge.net</i></a></li>
- <li>If you have access to <a href="ftninfo.html"> Fidonet </a>, you could netmail him at 1:342/5.</li>
-</ul>
+	<ul>
+	 <li><a href="mailto:airneil@users.sourceforge.net"><a> airneil@users.sourceforge.net</i></a></li>
+	 <li>If you have access to <a href="ftninfo.html"> Fidonet </a>, you could netmail him at 1:105/8.</li>
+	 <li>If you have access to Sysops TechNet, you can also netmail him at 111:5150/1.</li>
+	</ul>
 
-<hr width="50%">
-<p align="center">[<a href ="index.html">Home</a>]</p>
-
-<hr>
-
-<table width="100%" border="0">
-<tr><td>
-
- <a href="http://sourceforge.net">
- <img src="http://sourceforge.net/sflogo.php?group_id=29063&type=1"
-  width="88" height="31" border="0" alt="SourceForge Logo"></a>
-
- </td><td align="center">
-   <font size="-2">Copyright &copy;2001-2004 Robert J. Clay</font>
- </td></tr>
-</table>
+	<h2>Contacting <a href="http://sourceforge.net/users/bswift">Bob Swift</a></h2>
+	
+	<ul>
+	 <li><a href="mailto:bswift@users.sourceforge.net"><a> bswift@users.sourceforge.net</i></a></li>
+	 <li>If you have access to <a href="ftninfo.html"> Fidonet </a>, you could netmail him at 1:342/5.</li>
+	</ul>
 
 
-</body>
+        </div>
+      </div>
+
+    </div>
+    
+    <div id="footer">
+	<table width="100%">
+	 <tr><td>
+
+	 <a href="http://sourceforge.net">
+	 <img src="http://sourceforge.net/sflogo.php?group_id=29063&type=1"
+	  width="88" height="31" border="0" alt="SourceForge Logo"></a>
+
+	 </td><td align="right">
+	  <font size="-2">Copyright &copy; 2001-2005 Robert James Clay</font>
+<!--	  Any comments, suggestions, questions, etc. about this or
+	   any other page at this site; please feel free to
+	    <a href="contact.html">contact</a> one of us. -->
+	 </td></tr)
+	</table>
+    </div>
+
+  </body>
 </html>
