--- a/ftninfo.html
+++ b/ftninfo.html
@@ -1,66 +1,92 @@
-<HTML>
-<HEAD>
- <TITLE>ftnpl.sourceforge.net:  Fidonet Info</TITLE>
- <META NAME="author" CONTENT="Robert James Clay">
- <META NAME="keywords" CONTENT="Fidonet, FTN, Perl, BBS">
- <META NAME="description" CONTENT="Information and links about Fidonet.">
-</HEAD>
-<BODY BGCOLOR="#FFFFF0" TEXT="#000000" LINK="#0000FF" VLINK="#FF0000" >
+<html>
+  <head>
+     <title>ftnpl.sf.net:  Fidonet/FTN Info</title>
+     <meta name="author" content="Robert James Clay">
+     <meta name="keywords" CONTENT="Perl Fidonet FTN BBS">
+     <meta http-equiv="KEYWORDS" CONTENT="Perl, Fidonet, FTN, BBS">
+     <meta name="description" CONTENT="Information and links about Fidonet. ">
+     <link rel="stylesheet" type="text/css" href="./screen.css" media="screen, tv, projection" title="Default" />
+     <link rel="stylesheet" type="text/css" href="./print.css" media="print" />
+  </head>
+  <body>
 
-<H1 ALIGN="center">Fidonet Information</H1>
-
-<P ALIGN="center">
-Fidonet is an international amateur network of computer systems,
- often running public access BBS's, and all connected by modem 
- and/or via the Internet.
-</P>
-
-<H2> Fidonet Links</H2>
-
-<DL>
-<DT><H3>Fidonet Information</H3></DT>
-  <DD>For information about Fidonet itself, you can start by going to<A HREF="http://www.fidonet.org"> http://www.fidonet.org</A>.</DD>
-  <DD>For Fidonet News, you can go to<a href="http://www.fidonews.org"> http://www.fidonews.org</A>.</DD>
-  <DD>For information about Fidonet Technical Standards, you can go to<A HREF="http://www.ftsc.org"> http://www.ftsc.org</A>.</DD>
-
-<!--  2/2/04 - link not responding
-  <DD>For information about the Fidonet nodelist over time, you can go to<A HREF="http://goodolddaysbbs.etowns.net/fidonet.htm"> http://goodolddaysbbs.etowns.net/fidonet.htm</A>.
-     Or to <a href="http://fidonet-on-the-internet.org">http://fidonet-on-the-internet.org</a>, which
-     also has that information online.</DD>
+    <div id="header">
+<!--    
+      <div class="superHeader">
+        <span>Related Sites:</span>
+        <a href="http://www.rocasa.org" title="Information & Links">Info</a> |
+        <a href="http://www.ftngate.net" title="Fidonet/FTN Info">FTN</a>
+      </div>
 -->
+      <div class="midHeader">
+       <h1 class="headerTitle" lang="en">Perl for Fidonet (FTN) Systems</h1>
+        <div class="headerSubTitle" title="Description of page">
+          Information and links about Fidonet.
+        </div>
+      </div>
+      <div class="subHeader">
+        <span class="doNotDisplay">Navigation:</span>
+        <a href="./index.html">Home</a> |
+        <a href="./ftnplsw.html#scrpts">Scripts</a> |
+        <a href="./ftnplsw.html#apps">Apps</a> |
+        <a href="./ftnplsw.html#ftnpllinks">Links</a> |
+        <a href="./ftninfo.html">FTN</a> |
+        <a href="./contact.html">Contact Us</a> 
+      </div>
+    </div>
 
-</DL>
+    <div id="mainbody">
+      <div class="rowOfBoxes">
+        <div class="twoThirds noBorderOnLeft">
 
+	    <p> Fidonet is an international amateur network of computer systems, often
+	    running public access bbs's, and all connected by modem (& often via the
+	    internet as well).  &#34;Othernets&#34; are distribution networks which use fidonet software.  Also known as Fidonet Technogy Networks (FTN).</p>
 
-<H3>Fidonet Echos</H3>
+		 <p><a href="http://www.fidonet.org/inet92_Randy_Bush.txt">FidoNet: Technology, Use, Tools, and History</a>, By Randy Bush	</p>    
 
-<UL>
-  <LI>For an extensive listing of the echos carried on Fidonet or othernets, go to <A HREF="http://www.tlchost.net/echolist/"> http://www.tlchost.net/echolist/.</a>.</LI>
+	    <p>  &#34;Fido&#34;, &#34;<a href="http://www.fidonet.org">Fidonet</a>&#34;,
+	     and the dog-with-diskette are U.S. registered trademarks of Tom Jennings, tomj@wps.com. </p>
 
-<!-- 2/2/04 - link not responding
-  <LI> Or to <a href="http://fidonet-on-the-internet.org">http://fidonet-on-the-internet.org</a>, which
-     also has that information online.</LI>
--->
+      </div>
 
-</UL>
+      <div class="oneThird">
+	<h2>Quick links</h2> 
+	<ul>
+            <li><a href="http://www.fidonet.org">www.fidonet.org</a></li>
+            <li><a href="http://www.z1.fidonet.org">www.z1.fidonet.org</a></li>
+            <li><a href="http://www.z3.fidonet.org">www.z3.fidonet.org</a></li>
+            <li><a href="http://www.z6.fidonet.org">www.z6.fidonet.org</a></li>
+            <li><a href="http://www.fidonet.us">www.fidonet.us</a></li>
+            <li><a href="http://www.fidonet.ca">www.fidonet.ca</a></li>
+            <li><a href="http://www.ftsc.org">www.ftsc.org</a></li>
+       </ul>
 
+       <ul>
+	    <li><a href="http://host.z1.fidonet.net">host.z1.fidonet.net</a></li>
+            <li><a href="http://wwb.z1.fidonet.net">wwb.z1.fidonet.net</a></li>
+       </ul>
 
-<P ALIGN="center">  &#34;Fido&#34;, &#34;<A HREF="http://www.fidonet.org">Fidonet</A>&#34;, and the dog-with-diskette are U.S. registered trademarks
-of Tom Jennings, tomj@wps.com. </P>
+      </div>
 
+    </div>
+    
+    <div id="footer">
+	<table width="100%">
+	 <tr><td>
 
-<P ALIGN="center">
-[<A HREF ="index.html">Home</A>]
-<hr>
+	 <a href="http://sourceforge.net">
+	 <img src="http://sourceforge.net/sflogo.php?group_id=29063&type=1"
+	  width="88" height="31" border="0" alt="SourceForge Logo"></a>
 
+	 </td><td align="right">
+	  <font size="-2">Copyright &copy; 2001-2005 Robert James Clay</font>
+<!--	  Any comments, suggestions, questions, etc. about this or
+	   any other page at this site; please feel free to
+	    <a href="contact.html">contact</a> one of us. -->
+	 </td></tr)
+	</table>
+    </div>
 
-<P ALIGN="center">
-Any comments, suggestions, questions, etc. about this page; please feel free to <A HREF="contact.html"> contact </A>one of us.
-</P>
-
-<P ALIGN="center">
-<FONT SIZE="-2">Copyright &COPY;2001-2004 Robert J. Clay</FONT>
-</P>
-
-</BODY>
-</HTML>
+  </body>
+</html>
