--- a/index.html
+++ b/index.html
@@ -1,92 +1,129 @@
-<HTML>
-<HEAD>
- <TITLE>Perl for FTN Systems</TITLE>
- <META NAME="author" CONTENT="Robert James Clay">
- <META NAME="keywords" CONTENT="Perl Fidonet FTN BBS">
- <META http-equiv="KEYWORDS" CONTENT="Perl Fidonet FTN BBS">
- <META NAME="description" CONTENT="Information and links about using Perl with Fidonet systems. ">
-</HEAD>
-<BODY BGCOLOR="#FFFFF0" LINK="#0000FF" VLINK="#FF0000">
+<html>
+  <head>
+     <title>Perl for FTN Systems</title>
+     <meta name="author" content="Robert James Clay">
+     <meta name="keywords" CONTENT="Perl Fidonet FTN BBS">
+     <meta http-equiv="KEYWORDS" CONTENT="Perl, Fidonet, FTN, BBS">
+     <meta name="description" CONTENT="Information and links about using Perl with Fidonet systems. ">
+     <link rel="stylesheet" type="text/css" href="./screen.css" media="screen, tv, projection" title="Default" />
+     <link rel="stylesheet" type="text/css" href="./print.css" media="print" />
+  </head>
+  <body>
 
-<H1 ALIGN="CENTER">Perl for Fidonet (FTN) Systems</A></H1>
-
-<P> Fidonet is an international amateur network of computer systems, often
- running public access bbs's, and all connected by modem (& often via the
-internet as well).  This site is intended to provide a repository of Perl
-scripts, or links to where such Perl scripts might be found, for use on
-Fidonet Technology Networks (FTN) systems.   A longer term goal is for
-the development of Perl Modules, using the FTN namespace. </P>
-
-<HR>
-
-<DL>
- <DT><H2><A HREF="ftninfo.html">Fidonet</A> Software and Perl</H2><DT>
-  <DD>
-   <DL>
-    <DT>FTN related Perl scripts</DT> 
-     <DD>Those hosted here at <A HREF="ftnplsw.html#scrpts">ftnpl</A></DD>
-     <DD>Links to other Fidonet related Perl <A HREF="ftnplsw.html#ftnpllinks">scripts</A></DD>
-    <DT>FTN Related Applications</DT> 
-     <DD>Fidonet related Software <A HREF="ftnplsw.html#apps"> Applications </A>that could or are already using Perl scripts</DD>
-   </DL>
-  </DD>
-</DL>
-
-<DL>
-<DT><H2>ftnpl Project links</H2></DT> 
- <DD>
-  <DL>
-   <DT>Home Page</DT>
-    <DD><A HREF="http://ftnpl.sourceforge.net"> ftnl.sourceforge.net </A> </DD>
-    <DD>Or <A HREF="http://ftnpl.sf.net"> ftnpl.sf.net </A> </DD>
-
-   <DT>Summary Page</DT>
-    <DD><A HREF="http://sourceforge.net/projects/ftnpl">http://sourceforge.net/projects/ftnpl  </A></DD>
-
-   <DT>Project News</DT>
-    <DD>Project<A HREF="http://sourceforge.net/news/?group_id=29063"> News </A> </DD>
-
-   <DT>CVS</DT>
-
-    <DD>Project CVS </DD> 
-    <DD><A HREF="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/ftnpl">Browse the Project CVS</A> </DD> 
-
-   <DT>Mailing Lists</DT>
-    <DD>ftnpl-user</DD>
-    <DD>ftnpl-develop</DD>
-    <DD>ftnpl-announce</DD>
-
-<!--   This link isn't working properly...  8/26/01 - rjc
-    <DD>Mailing <a href="http://sourceforge.net/mail/?groupid=29063"> Lists</a></DD>
+    <div id="header">
+<!--    
+      <div class="superHeader">
+        <span>Related Sites:</span>
+        <a href="http://www.rocasa.org" title="Information & Links">Info</a> |
+        <a href="http://www.ftngate.net" title="Fidonet/FTN Info">FTN</a>
+      </div>
 -->
+      <div class="midHeader">
+       <h1 class="headerTitle" lang="en">Perl for Fidonet (FTN) Systems</h1>
+        <div class="headerSubTitle" title="Description of page">
+          Perl for Fidonet (FTN) Systems Index 
+        </div>
+      </div>
+<!--
+        <br class="doNotDisplay doNotPrint" />
+        <div class="headerLinks">
+          <span class="doNotDisplay">Tools:</span>
+          <a href="./index2.html">view an alternative layout &laquo;</a>
+          <span class="doNotDisplay">|</span>
+          <a style="cursor: help;" title="Thanks to CSS, this page is already printer friendly!">printer-friendly version &laquo;</a>
+        </div>
+      </div>
+-->
+      <div class="subHeader">
+        <span class="doNotDisplay">Navigation:</span>
+        <a href="./index.html">Home</a> |
+        <a href="./ftnplsw.html#scrpts">Scripts</a> |
+        <a href="./ftnplsw.html#apps">Apps</a> |
+        <a href="./ftnplsw.html#ftnpllinks">Links</a> |
+        <a href="./ftninfo.html">FTN</a> |
+        <a href="./contact.html">Contact Us</a> 
+      </div>
+    </div>
 
-   <DT>Contacting...</DT>
-    <DD><A HREF="contact.html">Contact </A>Information</DD>
+    <div id="mainbody">
+      <div class="rowOfBoxes">
+        <div class="twoThirds noBorderOnLeft">
 
-  </DL>
- </DD>
-</DL>
+	<p> Fidonet is an international amateur network of computer systems, often
+	 running public access bbs's, and all connected by modem (& often via the
+	internet as well).  This site is intended to provide a repository of Perl
+	scripts, or links to where such Perl scripts might be found, for use on
+	Fidonet Technology Networks (FTN) systems.   A longer term goal is for
+	the development of Perl Modules, using the FTN namespace. </p>
 
-<HR>
+	<h2><a href="ftninfo.html">Fidonet</a> Software and Perl</h2>
 
-<TABLE WIDTH="100%">
- <TR><TD>
+	  <dl>
+	    <dt>FTN related Perl scripts</dt> 
+	     <dd>Those hosted here at <a href="ftnplsw.html#scrpts">ftnpl</a></dd>
+	     <dd>Links to other Fidonet related Perl <a href="ftnplsw.html#ftnpllinks">scripts</a></dd>
+	    <dt>FTN Related Applications</dt> 
+	     <dd>Fidonet related Software <a href="ftnplsw.html#apps"> Applications </a>that could or are already using Perl scripts</dd>
+	   </dl>
 
- <A HREF="http://sourceforge.net">
- <IMG SRC="http://sourceforge.net/sflogo.php?group_id=29063&type=1"
-  WIDTH="88" HEIGHT="31" BORDER="0" ALT="SourceForge Logo"></A>
+      </div>
 
- </TD><TD>
-  Any comments, suggestions, questions, etc. about this or
-   any other page at this site; please feel free to <A HREF=
-   "contact.html">contact</A> one of us.
- </TD></TR)
-</TABLE>
+      <div class="oneThird">
 
-<P ALIGN="center">
- <FONT SIZE="-2">Copyright &COPY; 2001-2004 Robert J. Clay</FONT>
-</P>
+	<h2>ftnpl Project links</h2> 
 
-</BODY>
-</HTML>
+	   <ul>Home Page
+	    <li><a href="http://ftnpl.sourceforge.net"> ftnl.sourceforge.net </a> </li>
+	    <li>Or <a href="http://ftnpl.sf.net"> ftnpl.sf.net </a> </li>
+	   </ul>
 
+	   <ul>Summary Page
+	    <li><a href="http://sourceforge.net/projects/ftnpl">http://sourceforge.net/projects/ftnpl  </a></li>
+	   </ul>
+
+	   <ul>
+	    <li>Project<a href="http://sourceforge.net/news/?group_id=29063"> News </a> </li>
+	   </ul>
+
+	   <ul>Project CVS 
+	    <li><a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/ftnpl">Browse the Project CVS</a> </li> 
+	   </ul>
+
+	   <ul>Mailing Lists
+	    <li>ftnpl-user</li>
+	    <li>ftnpl-develop</li>
+	    <li>ftnpl-announce</li>
+	<!--   This link isn't working properly...  8/26/01 - rjc
+	    <li>Mailing <a href="http://sourceforge.net/mail/?groupid=29063"> Lists</a></li>
+	-->
+	   </uL>
+
+	   <ul>Contacting...
+	    <li><a href="contact.html">Contact </a>Information</li>
+
+	  </ul>
+
+        </div>
+      </div>
+
+    </div>
+    
+    <div id="footer">
+	<table width="100%">
+	 <tr><td>
+
+	 <a href="http://sourceforge.net">
+	 <img src="http://sourceforge.net/sflogo.php?group_id=29063&type=1"
+	  width="88" height="31" border="0" alt="SourceForge Logo"></a>
+
+	 </td><td align="right">
+	  <font size="-2">Copyright &copy; 2001-2005 Robert James Clay</font>
+<!--	  Any comments, suggestions, questions, etc. about this or
+	   any other page at this site; please feel free to
+	    <a href="contact.html">contact</a> one of us. -->
+	 </td></tr)
+	</table>
+    </div>
+
+  </body>
+</html>
