--- a/index.html
+++ b/index.html
@@ -11,35 +11,18 @@
   <body>
 
     <div id="header">
-<!--    
-      <div class="superHeader">
-        <span>Related Sites:</span>
-        <a href="http://www.rocasa.org" title="Information & Links">Info</a> |
-        <a href="http://www.ftngate.net" title="Fidonet/FTN Info">FTN</a>
-      </div>
--->
       <div class="midHeader">
        <h1 class="headerTitle" lang="en">Perl for Fidonet (FTN) Systems</h1>
         <div class="headerSubTitle" title="Description of page">
           Perl for Fidonet (FTN) Systems Index 
         </div>
       </div>
-<!--
-        <br class="doNotDisplay doNotPrint" />
-        <div class="headerLinks">
-          <span class="doNotDisplay">Tools:</span>
-          <a href="./index2.html">view an alternative layout &laquo;</a>
-          <span class="doNotDisplay">|</span>
-          <a style="cursor: help;" title="Thanks to CSS, this page is already printer friendly!">printer-friendly version &laquo;</a>
-        </div>
-      </div>
--->
       <div class="subHeader">
         <span class="doNotDisplay">Navigation:</span>
         <a href="./index.html">Home</a> |
-        <a href="./ftnplsw.html#scrpts">Scripts</a> |
-        <a href="./ftnplsw.html#apps">Apps</a> |
-        <a href="./ftnplsw.html#ftnpllinks">Links</a> |
+        <a href="./ftnplsw.html">Scripts</a> |
+        <a href="./applications.html">Apps</a> |
+        <a href="./links.html">Links</a> |
         <a href="./ftninfo.html">FTN</a> |
         <a href="./contact.html">Contact Us</a> 
       </div>
@@ -98,10 +81,6 @@
 	-->
 	   </uL>
 
-	   <ul>Contacting...
-	    <li><a href="contact.html">Contact </a>Information</li>
-
-	  </ul>
 
         </div>
       </div>
