Add separate applications and links pages.
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@502 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/ftninfo.html
+++ b/ftninfo.html
@@ -11,13 +11,6 @@
   <body>
 
     <div id="header">
-<!--    
-      <div class="superHeader">
-        <span>Related Sites:</span>
-        <a href="http://www.rocasa.org" title="Information & Links">Info</a> |
-        <a href="http://www.ftngate.net" title="Fidonet/FTN Info">FTN</a>
-      </div>
--->
       <div class="midHeader">
        <h1 class="headerTitle" lang="en">Perl for Fidonet (FTN) Systems</h1>
         <div class="headerSubTitle" title="Description of page">
@@ -27,9 +20,9 @@
       <div class="subHeader">
         <span class="doNotDisplay">Navigation:</span>
         <a href="./index.html">Home</a> |
-        <a href="./ftnplsw.html#scrpts">Scripts</a> |
-        <a href="./ftnplsw.html#apps">Apps</a> |
-        <a href="./ftnplsw.html#ftnpllinks">Links</a> |
+        <a href="./ftnplsw.html">Scripts</a> |
+        <a href="./applications.html">Apps</a> |
+        <a href="./links.html">Links</a> |
         <a href="./ftninfo.html">FTN</a> |
         <a href="./contact.html">Contact Us</a> 
       </div>
