--- a/ftnplsw.html
+++ b/ftnplsw.html
@@ -11,35 +11,18 @@
   <body>
 
     <div id="header">
-<!--    
-      <div class="superHeader">
-        <span>Related Sites:</span>
-        <a href="http://www.rocasa.org" title="Information & Links">Info</a> |
-        <a href="http://www.ftngate.net" title="Fidonet/FTN Info">FTN</a>
-      </div>
--->
       <div class="midHeader">
        <h1 class="headerTitle" lang="en">Perl for Fidonet (FTN) Systems</h1>
         <div class="headerSubTitle" title="Description of page">
           Fidonet(FTN) related Perl scripts/software 
         </div>
       </div>
-<!--
-        <br class="doNotDisplay doNotPrint" />
-        <div class="headerLinks">
-          <span class="doNotDisplay">Tools:</span>
-          <a href="./index2.html">view an alternative layout &laquo;</a>
-          <span class="doNotDisplay">|</span>
-          <a style="cursor: help;" title="Thanks to CSS, this page is already printer friendly!">printer-friendly version &laquo;</a>
-        </div>
-      </div>
--->
       <div class="subHeader">
         <span class="doNotDisplay">Navigation:</span>
         <a href="./index.html">Home</a> |
-        <a href="./ftnplsw.html#scrpts">Scripts</a> |
-        <a href="./ftnplsw.html#apps">Apps</a> |
-        <a href="./ftnplsw.html#ftnpllinks">Links</a> |
+        <a href="./ftnplsw.html">Scripts</a> |
+        <a href="./applications.html">Apps</a> |
+        <a href="./links.html">Links</a> |
         <a href="./ftninfo.html">FTN</a> |
         <a href="./contact.html">Contact Us</a> 
       </div>
@@ -49,13 +32,6 @@
       <div class="rowOfBoxes">
         <div class="fullWidth">
 
-        <ul>
-          <li>Fidonet related Perl <a href="#scrpts"> scripts </a> hosted here at ftnpl.sf.net.
-          <li>Fidonet related Perl <a href="#ftnpllinks"> Links</a>, etc.
-          <li>Fidonet related <a href="#apps">Applications </a> that can or do use Perl.
-        </ul>
-
-        <hr>
         <h3><a name="scrpts">Fidonet related Perl scripts</a></h3>
 
         <ul>Nodelist
@@ -101,45 +77,6 @@
           <li><b>af4max</b> - Perl script which will produce a list of all files available for download from the file areas of a Maximus bulletin board system.  Runs under Linux, DOS, OS/2 and Windows. (GNU GPL)</li>
   	</ul>
 
-        <hr width="100%">
-
-        <h3><a name="ftnpllinks">Fidonet related Perl Links</a></h3>
-
-        <ul>The vented spleen BBS
-           <li>Dos/Windows and Fidonet related Perl files</li>
-           <li>Freq'able at Fidonet 1:249/139</li>
-        </ul>
-
-        <ul>A Perl::JAM Module, by Johann Billings
-           <li><a href="http://www.df.lth.se/~billing/jamlib.html"> http://www.df.lth.se/~billing/jamlib.html</a>:  Link is at botton of page.</li>
-        </ul>
-
-        <hr>
-
-        <h3><a name="apps">Fidonet Applications and Perl</a></h3>
-
-        <p>The following is a sample listing of Fidonet related Software applications
-        that can use or are already using Perl scripts.</p>
-
-         <ul>Fidogate (<a href="http://www.fidogate.org"> www.fidogate.org</a>)
-          <li>This is a Fidonet - Internet gateway application.</li>
-          <li>Has an extensive set of Perl scripts associated with it.</li>
-          <li>Fidogate (<a href="http://fidogate.sf.net"> fidogate.sf.net</a>) project at SourceForge</li>
-          <li>A Russian version of the Fidogate (<a href="http://rusfidogate.sf.net"> rusfidogate.sf.net</A>) project at SourceForge</li>
-	 </ul>
-  
-         <ul>HPT (<a href="http://husky.sourceforge.net/hpt.html"> husky.sourceforge.net/hpt.html</A>)
-          <li>Highly Portable Tosser;  part of the <a href="http://husky.sourceforge.net"> Husky </A>project.</li>
-          <li>Has an extensive set of Perl hooks built into it.</li>
-	 </ul>
-	 
-         <ul>BBBS (<a href="http://www.bbbs.net"> www.bbbs.net</a>)
-          <li>This is a BBS program that is available for many different platforms, 
-             and while it has it's own scripting language it can also be set up to
-             use Perl.</li>
-	 </ul>
-
-        </dl>
 
         </div>
       </div>
