--- a/links.html
+++ b/links.html
@@ -21,7 +21,7 @@
         <span class="doNotDisplay">Navigation:</span>
         <a href="./index.html">Home</a> |
         <a href="./ftnplsw.html">Scripts</a> |
-        <a href="./ftnplapps.html">Apps</a> |
+        <a href="./applications.html">Apps</a> |
         <a href="./links.html">Links</a> |
         <a href="./ftninfo.html">FTN</a> |
         <a href="./contact.html">Contact Us</a> 
