Changed ftnplsw.html to information.html
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@504 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/applications.html
+++ b/applications.html
@@ -23,7 +23,7 @@
         <a href="./ftnplsw.html">Scripts</a> |
         <a href="./ftnplapps.html">Apps</a> |
         <a href="./links.html">Links</a> |
-        <a href="./ftninfo.html">FTN</a> |
+        <a href="./information.html">Info</a> |
         <a href="./contact.html">Contact Us</a> 
       </div>
     </div>
