--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
         <a href="./ftnplsw.html">Scripts</a> |
         <a href="./applications.html">Apps</a> |
         <a href="./links.html">Links</a> |
-        <a href="./ftninfo.html">FTN</a> |
+        <a href="./information.html">Info</a> |
         <a href="./contact.html">Contact Us</a> 
       </div>
     </div>
